fix: 修复 popup 组件滚动穿透;更改示例 overflow:auto为 scroll-view组件

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,8 @@ page {
 
 view,
 text,
-input {
+input,
+scroll-view {
   box-sizing: border-box;
 }
 
